--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AmphibiansApp</string>
     <string name="frog_photo">Frog photo</string>
     <string name="app_title">Frogs photos</string>
+    <string name="error">Error</string>
+    <string name="loading">Loading...</string>
 </resources>
